# JSONParser

./: .gitignore  CMakeLists.txt  CMakePresets.json  external.cpp  external.h  main.cpp
include/: JSONObject.h  JSONString.h  external.h
src/: CMakeLists.txt  JSONObject.cpp  JSONString.cpp  external.cpp  main.cpp
tests/: CMakeLists.txt  JSONObject_test.cpp  JSONString_test.cpp  example_test.cpp
